Trabajo WAR AndresPineda 12-11-2013

--- a/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
@@ -14,15 +14,15 @@
 
                         <h:outputText value="Empresa : " style="position: absolute; top: 45px;left: 400px;color: #14388B;font-weight: bold"/>
                         <h:outputText id="nombreEmpresa" value="#{controlCuenta.empresaActual.nombre}" style="font-weight: bold; color: #BF1A1A;position: absolute; top: 45px;left: 460px;"/>
-                        <h:outputText value="NIT : " style="position: absolute; top: 45px;left: 630px;color: #14388B;font-weight: bold"/>
-                        <h:outputText id="nitEmpresa" value="#{controlCuenta.empresaActual.nit}" style="font-weight: bold; color: #BF1A1A;position: absolute; top: 45px;left: 660px;"/>
+                        <h:outputText value="NIT : " style="position: absolute; top: 45px;left: 730px;color: #14388B;font-weight: bold"/>
+                        <h:outputText id="nitEmpresa" value="#{controlCuenta.empresaActual.nit}" style="font-weight: bold; color: #BF1A1A;position: absolute; top: 45px;left: 760px;"/>
 
 
                         <fieldset style="position: absolute; left: 10px; top: 70px; font-size: 10px; width: 830px; height: 400px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Cuentas</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
-                            <p:dataTable id="datosCuenta" var="infoC" rowKey="#{infoC.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;"   
+                            <p:dataTable id="datosCuenta" var="infoC" rowKey="#{infoC.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 830px"   
                                          value="#{controlCuenta.listCuentas}" scrollable="true" scrollHeight="262" scrollWidth="830"
                                          filteredValue="#{controlCuenta.filtrarListCuentas}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="9"  
@@ -63,7 +63,7 @@
                                 </p:column>
 
                                 <p:column headerText="Naturaleza" style="padding: 0"  filterMatchMode="contains" id="cuentaNaturaleza" width="90" filterStyle="display: none; visibility: hidden;" >                                  
-                                    <p:selectOneMenu id="editarCuentaNaturaleza" value="#{infoC.naturaleza}" style="width: 99%; font-weight: bold;text-transform: uppercase">  
+                                    <p:selectOneMenu id="editarCuentaNaturaleza" value="#{infoC.naturaleza}" style="width: 85px; font-weight: bold;text-transform: uppercase">  
                                         <f:selectItem itemLabel="" itemValue="null" /> 
                                         <f:selectItem itemLabel="DEBITO" itemValue="DEBITO" />  
                                         <f:selectItem itemLabel="CREDITO" itemValue="CREDITO" /> 
@@ -92,7 +92,7 @@
                                 </p:column>
 
                                 <p:column headerText="Tipo" style="padding: 0"  filterMatchMode="contains" id="cuentaTipo" width="100" filterStyle="display: none; visibility: hidden;" >                                  
-                                    <p:selectOneMenu id="editarCuentaTipo" value="#{infoC.tipo}" style="width: 99%; font-weight: bold;text-transform: uppercase">  
+                                    <p:selectOneMenu id="editarCuentaTipo" value="#{infoC.tipo}" style="width: 95px; font-weight: bold;text-transform: uppercase">  
                                         <f:selectItem itemLabel="" itemValue="null" /> 
                                         <f:selectItem itemLabel="CtaXPagar" itemValue="CXP" />  
                                         <f:selectItem itemLabel="CtaXCobrar" itemValue="CXC" />  
@@ -152,7 +152,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="C.C." style="padding: 0"  filterMatchMode="contains" id="cuentaCC" width="90" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="C.C." style="padding: 0"  filterMatchMode="contains" id="cuentaCC" width="50" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:selectOneMenu id="editarCuentaCC" value="#{infoC.manejacentrocosto}" style="width: 99%; font-weight: bold;text-transform: uppercase">  
                                         <f:selectItem itemLabel="" itemValue="null" /> 
                                         <f:selectItem itemLabel="SI" itemValue="S" />  
@@ -163,7 +163,7 @@
                                         <h:outputText value="C.C." />
                                     </f:facet>
                                 </p:column>
-                                <p:column headerText="I.C.C." style="padding: 0"  filterMatchMode="contains" id="cuentaICC" width="90" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="I.C.C." style="padding: 0"  filterMatchMode="contains" id="cuentaICC" width="50" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:selectOneMenu id="editarCuentaICC" value="#{infoC.incluyecentrocostocodigocuenta}" style="width: 99%; font-weight: bold;text-transform: uppercase">  
                                         <f:selectItem itemLabel="" itemValue="null" /> 
                                         <f:selectItem itemLabel="SI" itemValue="S" />  
@@ -234,8 +234,15 @@
                             </p:dataTable>
                         </fieldset>
 
+                        <p:commandButton value="Buscar Cuenta"  style="position: absolute; left: 10px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="BUSCARTODOS" actionListener="#{controlCuenta.dialogoSeleccionarCuenta()}" process="@this"/>
+                        <p:commandButton value="Mostrar Todos" style="position: absolute; left: 115px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="MOSTRARTODOS" actionListener="#{controlCuenta.mostrarTodos()}" process="@this"/>
+                        <p:commandButton  style="background-image: url(Imagenes/revisar.jpg); background-size: 100% 100%; background-repeat: no-repeat;position: absolute; width: 28px; height: 28px; left: 230px; top: 500px;" id="DETALLES" value="" process="@this" action="detalleCuenta" actionListener="#{controlDetalleCuenta.recibirCuenta(controlCuenta.cuentaActual.secuencia)}" />
+                        <p:tooltip style="font-size: 12px" for="DETALLES" value="Detalles Cuenta" />
+
+                        <p:separator id="separator"  style="vertical-align: central;position: absolute;height: 25px;width: 1px;top: 495px;left: 270px "/>  
+
                         <p:commandButton style="position: absolute; left: 700px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosCuenta" process="@this" />
-                        <p:commandButton style="position: absolute; left: 20px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlCuenta.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 285px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlCuenta.cancelarModificacion()}" process="@this" />
                         <p:commandButton style="position: absolute; left: 790px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlCuenta.salir()}" action="nomina" process="@this" />
                     </p:panel>
 
@@ -310,16 +317,16 @@
 
 
                     <p:dialog header="Cuentas" widgetVar="BuscarCuentasDialogo" draggable="false" resizable="false" closable="false" id="BuscarCuentasDialogo"  
-                              showEffect="fade" hideEffect="fade" width="720" modal="true" style="font-size: 11px;">
-                        <p:dataTable id="lovCuentas" style="font-size: 11px; width: 700px" var="buscarC" value="#{controlCuenta.listCuentasTesoreria}" rowKey="#{buscarC.secuencia}"
-                                     selection="#{controlCuenta.cuentaSeleccionada}" selectionMode="single" widgetVar="lovCuentas" scrollable="true" scrollWidth="700" scrollHeight="250"
+                              showEffect="fade" hideEffect="fade" width="520" modal="true" style="font-size: 11px;">
+                        <p:dataTable id="lovCuentas" style="font-size: 11px; width: 500px" var="buscarC" value="#{controlCuenta.listCuentasTesoreria}" rowKey="#{buscarC.secuencia}"
+                                     selection="#{controlCuenta.cuentaSeleccionada}" selectionMode="single" widgetVar="lovCuentas" scrollable="true" scrollWidth="500" scrollHeight="250"
                                      filteredValue="#{controlCuenta.filtrarListCuentasTesoreria}" emptyMessage="No se encontraron resultados con el criterio de busqueda.">              
                             <p:ajax event="rowSelect" listener="#{controlCuenta.activarAceptar()}" update=":form:aceptarBC"/>
                             <f:facet name="header">  
                                 <h:outputText value="Buscar Cuenta: "  style="position: absolute; left: 27px; top: 14px"/>  
                                 <p:inputText id="globalFilter" onkeyup="lovCuentas.filter();" style="width:150px; position: relative; left: 20px;" />  
                             </f:facet>
-                            <p:column filterBy="#{buscarC.codigo}" width="200"  filterMatchMode="contains">
+                            <p:column filterBy="#{buscarC.codigo}" width="150"  filterMatchMode="contains">
                                 <f:facet name="header">
                                     <h:outputText value="Codigo" />
                                 </f:facet>
@@ -332,10 +339,10 @@
                                 <h:outputText  value="#{buscarC.descripcion}" />
                             </p:column>
                         </p:dataTable>
-                        <p:commandButton id="aceptarBC" style="position: relative; left: 450px" value="Aceptar" actionListener="#{controlCuenta.validarSeleccionCuenta()}" disabled="#{controlCuenta.aceptar}" onclick="BuscarCuentasDialogo.hide(), lovCuentas.clearFilters();" update="lovCuentas, aceptarBC, datosCuenta" process="@this">
+                        <p:commandButton id="aceptarBC" style="position: relative; left: 250px" value="Aceptar" actionListener="#{controlCuenta.validarSeleccionCuenta()}" disabled="#{controlCuenta.aceptar}" onclick="BuscarCuentasDialogo.hide(), lovCuentas.clearFilters();" update="lovCuentas, aceptarBC, datosCuenta" process="@this">
                             <p:resetInput target=":form:lovCuentas:globalFilter"/>
                         </p:commandButton>
-                        <p:commandButton id="atrasBC" style="position: relative; left: 500px" value="Atras" actionListener="#{controlCuenta.cancelarSeleccionCuenta()}" onclick="BuscarCuentasDialogo.hide(), lovCuentas.clearFilters();" update="lovCuentas" process="@this">
+                        <p:commandButton id="atrasBC" style="position: relative; left: 300px" value="Atras" actionListener="#{controlCuenta.cancelarSeleccionCuenta()}" onclick="BuscarCuentasDialogo.hide(), lovCuentas.clearFilters();" update="lovCuentas" process="@this">
                             <p:resetInput target=":form:lovCuentas:globalFilter"/>
                         </p:commandButton>
                     </p:dialog>
