--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -483,7 +483,7 @@
                                         <h:outputText style="font-size: 11px; position: absolute; left: 360px; top: 195px; width: 150px;" value="Genera reportes predefinidos referentes a la nómina."/>
 
 
-                                        <p:commandButton value=" " id="btnParametrosLiquidacion" style="position: absolute; left: 10px; top: 5px; width: 80px; height: 80px; background-image: url(Imagenes/nom_parametros.gif);  background-repeat: no-repeat; background-size: 100% 100%; "/>
+                                        <p:commandButton value=" " id="btnParametrosLiquidacion" style="position: absolute; left: 10px; top: 5px; width: 80px; height: 80px; background-image: url(Imagenes/nom_parametros.gif);  background-repeat: no-repeat; background-size: 100% 100%;" action="parametro"/>
 
                                         <p:commandButton value=" " id="btnGenerarLiquidacion" style="position: absolute; left: 10px; top: 90px; width: 80px; height: 80px; background-image: url(Imagenes/nom_liquidar.gif);  background-repeat: no-repeat; background-size: 100% 100%; " update="confirmarLiquidacion" oncomplete="confirmarLiquidacion.show();"/>
 
