--- a/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
@@ -44,7 +44,7 @@
                                 </p:calendar>
 
                                 <h:outputText value="Estructura: " style="font-weight: bold; color: #14388B; position: absolute; top: 20px; left: 311px"/>
-                                <p:inputText id="Estructura" value="#{controlParametro.parametroLiquidacion.estructura.nombre}" style="position: absolute; top: 35px; left: 311px; width: 180px; font-weight: bold" 
+                                <p:inputText id="Estructura" value="#{controlParametro.parametroLiquidacion.estructura.nombre}" style="position: absolute; top: 35px; left: 311px; width: 180px; font-weight: bold; text-transform: uppercase" 
                                              ondblclick="llamarLov(([{name: 'LOV', value: 'ESTRUCTURA'}]));" onclick="select();">
                                     <p:ajax event="click" listener="#{controlParametro.valoresBackupAutocompletar('ESTRUCTURA')}"/>
                                     <p:ajax event="change" listener="#{controlParametro.autocompletar('ESTRUCTURA', controlParametro.parametroLiquidacion.estructura.nombre)}"/>
@@ -57,25 +57,25 @@
                                              onclick="ubicacionC(([{name: 'CAMPO', value: 'NOMBRE CC'}]));"/>
 
                                 <h:outputText value="Tipo trabajador: " style="font-weight: bold; color: #14388B; position: absolute; top: 62px; left: 7px"/>
-                                <p:inputText id="tipoTrabajador" value="#{controlParametro.parametroLiquidacion.tipotrabajador.nombre}" style="position: absolute; top: 77px; width: 239px; left: 7px" 
+                                <p:inputText id="tipoTrabajador" value="#{controlParametro.parametroLiquidacion.tipotrabajador.nombre}" style="position: absolute; top: 77px; width: 239px; left: 7px; text-transform: uppercase" 
                                              ondblclick="llamarLov(([{name: 'LOV', value: 'TIPO TRABAJADOR'}]));" onclick="select();">
                                     <p:ajax event="click" listener="#{controlParametro.valoresBackupAutocompletar('TIPO TRABAJADOR')}"/>
                                     <p:ajax event="change" listener="#{controlParametro.autocompletar('TIPO TRABAJADOR', controlParametro.parametroLiquidacion.tipotrabajador.nombre)}"/>
                                 </p:inputText>
                                 <h:outputText value="Proceso: " style="font-weight: bold; color: #14388B; position: absolute; top: 62px; left: 260px"/>
-                                <p:inputText id="proceso" value="#{controlParametro.parametroLiquidacion.proceso.descripcion}" style="position: absolute; top: 77px; left: 260px; width: 240px" 
+                                <p:inputText id="proceso" value="#{controlParametro.parametroLiquidacion.proceso.descripcion}" style="position: absolute; top: 77px; left: 260px; width: 240px; text-transform: uppercase" 
                                              ondblclick="llamarLov(([{name: 'LOV', value: 'PROCESO'}]));" onclick="select();">
                                     <p:ajax event="click" listener="#{controlParametro.valoresBackupAutocompletar('PROCESO')}"/>
                                     <p:ajax event="change" listener="#{controlParametro.autocompletar('PROCESO', controlParametro.parametroLiquidacion.proceso.descripcion)}"/>
                                 </p:inputText>
                             </p:panel>
-                            <p:commandButton value="[ Adicionar los empleados a liquidar ]" style=" font-size: 15px; font-family: 'Book Antiqua'; font-weight: bold; position: absolute; top: 67px; left: 521px; width: 320px" actionListener="#{controlParametro.consultarEmpleadosParametrizados()}" process="@this" />
+                            <p:commandButton value="[ Adicionar los empleados a liquidar ]" style=" font-size: 15px; font-family: 'Book Antiqua'; font-weight: bold; position: absolute; top: 67px; left: 521px; width: 320px" actionListener="#{controlParametro.validacionesAdicionarEmpleados()}" process="@this" />
                         </fieldset>
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 40px; left: 12px; height: 23px">   
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 35px; left: 12px; height: 23px">   
                             <p:toolbarGroup align="left"> 
 
-                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlParametro.guardarCambios()}" process="@this" />
+                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlParametro.validarGuardadoRapido()}" process="@this" />
                                 <p:tooltip style="font-size: 12px" for="guardarRapido" value="Guardar" />
                                 <p:commandButton id="editar" value="" style="background-image: url(Imagenes/editar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlParametro.editarCelda()}" process="@this"/>
                                 <p:tooltip style="font-size: 12px" for="editar" value="Editar" />
@@ -103,13 +103,13 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 5px; top: 190px; font-size: 11px; width: 835px; height: 300px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 5px; top: 190px; font-size: 11px; width: 835px; height: 290px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Empleados a liquidar</strong></legend>
 
                             <p:dataTable id="empleadosParametros" var="empleadoParametro" rowKey="#{empleadoParametro.secuencia}" rowIndexVar="indice" style="font-size: 12px; border: 1px;"                            
-                                         value="#{controlParametro.empleadosParametros}" scrollable="true" scrollHeight="245" scrollWidth="840"
-                                         filteredValue="#{controlParametro.filtradoEmpleadosParametros}" emptyMessage="No se encontrarón resultados para la búsqueda"
-                                         editable="true" editMode="cell" >
+                                         value="#{controlParametro.empleadosParametros}" scrollable="true" scrollHeight="#{controlParametro.altoTabla}" scrollWidth="840"
+                                         filteredValue="#{controlParametro.filtradoEmpleadosParametros}" emptyMessage="No se encontrarón resultados."
+                                         editable="true" editMode="cell" liveScroll="true" scrollRows="30">
 
                                 <p:column headerText="" width="60" style="padding: 0px">                                  
                                     <p:commandButton value="Quitar >" actionListener="#{controlParametro.eliminarParametros(indice)}" style="font-size: 10px; border-radius: 0px" process="@this" />
@@ -213,9 +213,13 @@
                                     </p:cellEditor>
                                 </p:column>  
                             </p:dataTable>
+                            <p:commandButton style="position: absolute; left: 9px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" disabled="#{controlParametro.borrarTodos}" id="quitarTodos" value="Quitar todos" actionListener="#{controlParametro.borrarParametros()}" process="@this"/>
+                            <p:commandButton style="position: absolute; left: 102px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="cambiosMasivos" value="Cambios masivos" process="@this"/>
+                            <p:commandButton style="position: absolute; left: 226px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="verificarEmpleados" value="Verificar Empleados" process="@this"/>
                         </fieldset>
-                        <p:commandButton style="position: absolute; left: 9px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlParametro.salir()}" update="panelParametro, empleadosParametros"  process="@this" />
-                        <p:commandButton style="position: absolute; left: 100px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="quitarTodos" value="Quitar todos" actionListener="#{controlParametro.borrarParametros()}" process="@this"/>
+                        <p:commandButton style="position: absolute; left: 9px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlParametro.salir()}" update="panelParametro, empleadosParametros, quitarTodos"  process="@this" />
+                        <p:commandButton style="position: absolute; left: 717px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="aceptar" disabled="#{controlParametro.guardado}" value="Aceptar" icon="ui-icon-check"  actionListener="#{controlParametro.validarGuardado()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 800px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlParametro.salir()}" action="nomina" process="@this" />
                     </p:panel>
 
                     <p:remoteCommand name="llamarLov" actionListener="#{controlParametro.llamarLov()}" process="@this"/>
@@ -394,6 +398,45 @@
                         <h:outputText value="¿Desea continuar?" style="position: absolute; left: 100px; top: 85px; width: 300px; font-weight:bold; text-align: center" />
                         <p:commandButton value="Aceptar" onclick="confirmarAdicionarEmpleados.hide();" actionListener="#{controlParametro.adicionarEmpleados()}" style="position: absolute; top: 115px; left: 220px; " process="@this" />
                         <p:commandButton value="Cancelar" onclick="confirmarAdicionarEmpleados.hide();" style="position: absolute; top: 115px; left: 292px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="errorDias" header="ATENCIÓN...!" widgetVar="errorDias"  resizable="false" draggable="false" modal="true" height="149" width="460px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="110" height="80" style="position: absolute; left: 5px; top: 20px;"  />
+                        <h:outputText value="Esta ingresando fechas de la novedad (Desde - Hasta) con un rango superior a un mes (30 días). 
+                                      Cerciórese que esto es correcto. Recuerde que deben corresponder a la minima unidad de liquidación." style="position: absolute; left: 110px; top: 20px; width: 330px; text-align: justify" />
+                        <h:outputText value="¿Desea continuar?" style="position: absolute; left: 100px; top: 85px; width: 360px; font-weight:bold; text-align: center" />
+                        <p:commandButton value="Aceptar" onclick="errorDias.hide();" actionListener="#{controlParametro.guardarCambios()}" style="position: absolute; top: 115px; left: 220px; " process="@this" />
+                        <p:commandButton value="Cancelar" onclick="errorDias.hide();" style="position: absolute; top: 115px; left: 292px" process="@this" />
+                    </p:dialog>
+                    
+                    <p:dialog id="errorDiasSalir" header="ATENCIÓN...!" widgetVar="errorDiasSalir"  resizable="false" draggable="false" modal="true" height="149" width="460px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="110" height="80" style="position: absolute; left: 5px; top: 20px;"  />
+                        <h:outputText value="Esta ingresando fechas de la novedad (Desde - Hasta) con un rango superior a un mes (30 días). 
+                                      Cerciórese que esto es correcto. Recuerde que deben corresponder a la minima unidad de liquidación." style="position: absolute; left: 110px; top: 20px; width: 330px; text-align: justify" />
+                        <h:outputText value="¿Desea continuar?" style="position: absolute; left: 100px; top: 85px; width: 360px; font-weight:bold; text-align: center" />
+                        <p:commandButton value="Aceptar" onclick="errorDiasSalir.hide(); confirmarGuardar.show();" style="position: absolute; top: 115px; left: 220px; " process="@this" />
+                        <p:commandButton value="Cancelar" onclick="errorDiasSalir.hide();" style="position: absolute; top: 115px; left: 292px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="errorFechas" header="ATENCIÓN...!" widgetVar="errorFechas"  resizable="false" draggable="false" modal="true" height="109" width="400px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="90" height="60" style="position: absolute; left: 15px; top: 10px;"  />
+                        <h:outputText value="!La fecha de corte [#{controlParametro.strFechaCorte}] no coincide con el periodo activo!. [#{controlParametro.strFechaInicial}  -  #{controlParametro.strFechaFinal}]" style="position: absolute; left: 110px; top: 20px; width: 270px; text-align: justify" />
+                        <h:outputText value="¿Desea continuar?" style="position: absolute; left: 100px; top: 55px; width: 300px; font-weight:bold; text-align: center" />
+                        <p:commandButton value="Aceptar" onclick="errorFechas.hide();" actionListener="#{controlParametro.seguirErrorFechas()}" style="position: absolute; top: 75px; left: 220px; " process="@this" />
+                        <p:commandButton value="Cancelar" onclick="errorFechas.hide();" style="position: absolute; top: 75px; left: 292px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="confirmarGuardar" header="ATENCIÓN...!" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="¿Desea guardar los cambios realizados?" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
+                        <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlParametro.guardarCambios()}" action="nomina" style="position: absolute; top: 60px; left: 215px" process="@this" />
+                        <p:commandButton value="No" onclick="confirmarGuardar.hide();" actionListener="#{controlParametro.salir()}" action="nomina" style="position: absolute; top: 60px; left: 255px" process="@this" />
+                        <p:commandButton value="Cancelar" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="lovVacia" header="ATENCIÓN...!" widgetVar="lovVacia"  resizable="false" draggable="false" modal="true" height="100" width="400px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="110" height="80" style="position: absolute; left: 5px; top: 20px;"  />
+                        <h:outputText value="No hay elementos en la lista de valores." style="position: absolute; left: 110px; top: 20px; width: 270px; font-weight:bold; text-align: center" />
                     </p:dialog>
                 </h:form>
 
