--- a/DesignerRHN/DesignerRHN-war/web/VigenciasProyectos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/VigenciasProyectos.xhtml
@@ -86,7 +86,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooProyecto" value="Nombre del Proyecto"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooProyecto" value="Nombre del Proyecto" action="pageProyectos"/>
                                     </f:facet>
                                 </p:column>
 
@@ -229,6 +229,7 @@
                         <h:inputText id="totalPersonas" value="#{controlVigenciasProyectos.proyectoParametro.cantidadpersonas}" style="left:760px;position: absolute;width:80px;top:110px" readonly="true" />
                         <h:outputText value="Detalle del Proyecto" style="font-size: 10px;position: absolute;top:145px;left: 15px"/>
                         <h:inputText id="detalleProyecto" value="#{controlVigenciasProyectos.proyectoParametro.descripcionproyecto}" style="left:150px;width: 690px;height:50px ;position: absolute; top: 140px;" readonly="true" />
+
                     </fieldset>
                 </h:form>
 
